# Synthseg-lesion

./: .gitignore  README.md  pyproject.toml
output/: dataset.json
scripts/: RandomLesionsAugmentations.py  random_mask_pasting.py  synthseg-gen.py
synthsegLesion/config_files/: transforms.json
synthsegLesion/data_augmentation/: transforms.json
synthsegLesion/data_augmentation/custom_transforms/: random_mask_pasting.py
synthsegLesion/run/: generate_synthetic_images.py
synthsegLesion/scripts/: synthseg_gen.py
synthsegLesion/utilities/: utils.py
